--- a/BusinessLayer/BusinessLayer.csproj
+++ b/BusinessLayer/BusinessLayer.csproj
@@ -157,11 +157,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Appointment.cs" />
+    <Compile Include="AppointmentBUS.cs" />
     <Compile Include="CommonProps.cs" />
     <Compile Include="Common\CmnMethods.cs" />
     <Compile Include="Common\Global.cs" />
     <Compile Include="Medicine.cs" />
     <Compile Include="Patient.cs" />
+    <Compile Include="Prescription.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserInfo.cs" />
   </ItemGroup>
