--- a/PresentationLayer/App.config
+++ b/PresentationLayer/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="PresentationLayer.Properties.Settings.CMSystemConnectionString"
+            connectionString="Data Source=OZLADE\SQLEXPRESS;Initial Catalog=CMSystem;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
