--- a/PresentationLayer/App.config
+++ b/PresentationLayer/App.config
@@ -3,9 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="PresentationLayer.Properties.Settings.CMSystemConnectionString"
-            connectionString="Data Source=OZLADE\SQLEXPRESS;Initial Catalog=CMSystem;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
+        <add name="PresentationLayer.Properties.Settings.CMSystemConnectionString" connectionString="Data Source=OZLADE\SQLEXPRESS;Initial Catalog=CMSystem;Integrated Security=True" providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
