--- a/PresentationLayer/packages.config
+++ b/PresentationLayer/packages.config
@@ -20,6 +20,7 @@
   <package id="Microsoft.IdentityModel.Protocols" version="7.5.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="7.5.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Tokens" version="7.5.0" targetFramework="net48" />
+  <package id="QRCoder" version="1.6.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.ClientModel" version="1.0.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net48" />
