--- a/PresentationLayer/packages.config
+++ b/PresentationLayer/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Azure.Core" version="1.38.0" targetFramework="net48" />
   <package id="Azure.Identity" version="1.11.4" targetFramework="net48" />
+  <package id="EPPlus" version="8.0.3" targetFramework="net48" />
+  <package id="EPPlus.Interfaces" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.Cryptography" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.Data.SqlClient" version="6.0.1" targetFramework="net48" />
@@ -20,9 +22,11 @@
   <package id="Microsoft.IdentityModel.Protocols" version="7.5.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="7.5.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Tokens" version="7.5.0" targetFramework="net48" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.1" targetFramework="net48" />
   <package id="QRCoder" version="1.6.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.ClientModel" version="1.0.0" targetFramework="net48" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net48" />
   <package id="System.IdentityModel.Tokens.Jwt" version="7.5.0" targetFramework="net48" />
   <package id="System.IO.FileSystem.AccessControl" version="5.0.0" targetFramework="net48" />
@@ -33,6 +37,7 @@
   <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Pkcs" version="8.0.1" targetFramework="net48" />
   <package id="System.Security.Cryptography.ProtectedData" version="4.7.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Xml" version="8.0.2" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net48" />
   <package id="System.Text.Json" version="6.0.10" targetFramework="net48" />
