--- a/BusinessLayer/BusinessLayer.csproj
+++ b/BusinessLayer/BusinessLayer.csproj
@@ -162,6 +162,8 @@
     <Compile Include="CommonProps.cs" />
     <Compile Include="Common\CmnMethods.cs" />
     <Compile Include="Common\Global.cs" />
+    <Compile Include="GetUserInfoBL.cs" />
+    <Compile Include="GetUserTypeBL.cs" />
     <Compile Include="LoginBL.cs" />
     <Compile Include="Medicine.cs" />
     <Compile Include="Patient.cs" />
