--- a/DataLayer/DataLayer.csproj
+++ b/DataLayer/DataLayer.csproj
@@ -42,8 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DBCommon.cs" />
-    <Compile Include="GetUserInfoDL.cs" />
-    <Compile Include="GetUserTypeDL.cs" />
+    <Compile Include="UserInfoDL.cs" />
     <Compile Include="LoginDL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
