--- a/BusinessLayer/BusinessLayer.csproj
+++ b/BusinessLayer/BusinessLayer.csproj
@@ -168,6 +168,7 @@
     <Compile Include="MedicineBL.cs" />
     <Compile Include="PatientBL.cs" />
     <Compile Include="PrescriptionBL.cs" />
+    <Compile Include="SymptomBL.cs" />
     <Compile Include="UserInfoBL.cs" />
     <Compile Include="LoginBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
