--- a/DataTransferLayer/DataTransferLayer.csproj
+++ b/DataTransferLayer/DataTransferLayer.csproj
@@ -50,6 +50,7 @@
     <Compile Include="PatientDTO.cs" />
     <Compile Include="PrescriptionDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Symptom.cs" />
     <Compile Include="UserInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
